<resources>
    <string name="app_name">MyRecylerView</string>
    <string name="heroes_name">Nama Pahlawan</string>
    <string name="hero_nickname">Nickname</string>
    <string name="desc">Hero desc</string>
    <string name="herobirth">Hero birthday</string>
    <string name="detail">Detail</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="with_cardview">with CardView</string>
    <string name="favorite">Favorite</string>
    <string name="share">detail</string>
    <string name="content_text">Albedo — an alchemist based in Mondstadt, in the service of the Knights of Favonius.
Genius, Kreideprinz, or Captain of the Investigation Team. Such titles and honors are of no consequence to him when there is so much more research to conduct.
The pursuit of fortune and connections cannot hold a candle to his hearts desire — acquiring the limitless, obscure knowledge left behind by previous generations of scholars.</string>
    <string name="content_specs_display">september 13th</string>
    <string name="content_specs_size">Mondstadt</string>
    <string name="content_specs_battery">Knights of Favonius</string>
    <string name="stock">The Kreideprinz</string>
    <string name="my_name">Nojima Kenji</string>
    <string name="dummy_value">Albedo</string>
    <string name="sword">Sword</string>
    <string name="vc">Voice Actor</string>
    <string name="profile">Profile</string>
    <string name="birthday">Birthday</string>
    <string name="nation">Nation</string>
    <string name="affil">Affiliation</string>
    <string name="bow">Bow</string>
    <string name="polearm">Polearm</string>
    <string name="catalyst">Catalyst</string>
    <string name="claymore">Claymore</string>
    <string name="amber">Amber</string>
    <string name="bennet">Bennet</string>
    <string name="diluc">Diluc</string>
    <string name="eula">Eula</string>
    <string name="jean">Jean</string>
    <string name="kaeya">Kaeya</string>
    <string name="noelle">Noelle</string>
    <string name="razor">Razor</string>
    <string name="sucrose">Sucrose</string>
    <string name="desc_amber">A perky, straightforward girl, who is also the only Outrider of the Knights of Favonius. Her amazing mastery of the glider has made her a three-time winner of the Gliding Championship in Mondstadt. As a rising star within the Knights of Favonius, Amber is always ready for any challenging tasks.</string>
    <string name="pang_amber">Outrider</string>
    <string name="amber_birthday">August 10th</string>
    <string name="amber_vc">Iwami Manaka</string>
    <string name="bennet_desc">The few young adventurers that the Mondstadt Adventurers Guild has always found themselves tangled up in baffling bouts of bad luck. He is the only active member of his own adventure group, known as "Benny'\s Adventure Team," after all the other members decided to "take leave" following a series of unfortunate incidents. As a result, the team is currently on the verge of being dissolved. Being unable to break the poor boys heart, Katheryne of the Adventurers Guild has kept "Benny Adventure Team" on the books, whilst also hiding from him the fact that all the other members have long since officially left the team.</string>
    <string name="pang_bennet">Trial by Fire</string>
    <string name="bennet_birthday">February 29th</string>
    <string name="bennet_affil">Adventures Guild</string>
    <string name="bennet_vc">Ousaka Ryouta</string>
    <string name="diluc_desc">As the wealthiest gentleman in Mondstadt, the ever-dapper Diluc always presents himself as the epitome of perfection. But behind the courteous visage burns a zealous soul that has sworn to protect Mondstadt at all costs, allowing him to mercilessly vanquish all who threaten his city.</string>
    <string name="pang_diluc">Darknight Hero</string>
    <string name="diluc_birthday">April 30th</string>
    <string name="diluc_affil">Dawn Winery</string>
    <string name="diluc_vc">Ono Kenshou</string>
    <string name="eula_desc">A rebellious descendant of the old aristocracy who is always out on the battlefield. As one born into the old aristocracy, carrying the bloodline of sinners, Eula has needed a unique approach to the world to navigate the towering walls of prejudice peacefully. Of course, this did not prevent her from severing ties with her clan. As the outstanding Spindrift Knight, she hunts down Mondstadts enemies in the wild to exact her unique "vengeance."</string>
    <string name="pang_eula">Spindrift</string>
    <string name="eula_birthday">October 25th</string>
    <string name="eula_affil">Knight of Favonius
    Lawrence Clan</string>
    <string name="eula_vc">Sato Rina</string>
    <string name="jean_desc">As the Acting Grand Master of the Knights, Jean has always been devoted to her duties and maintaining peace in Mondstadt. She had taken precautions long before the onset of Stormterrors assault, and she will guard Mondstadt with her life as always.</string>
    <string name="pang_jean">Dandellion Knight</string>
    <string name="jean_birthday">March 14th</string>
    <string name="jean_affil">Knight of Favonius
    Gunnhildr Clan</string>
    <string name="jean_vc">Saito Chiwa</string>
    <string name="kaeya_desc">In the Knights of Favonius, Kaeya is the most trusted aide for the Acting Grand Master Jean. You can always count on him to solve any intractable problems. Everyone in Mondstadt loves Kaeya, but no one knows what secrets this witty.</string>
    <string name="pang_Kaeya">Cavalry Captain</string>
    <string name="kaeya_birthday">November 30th</string>
    <string name="kaeya_affil">Knight of Favonius</string>
    <string name="kaeya_vc">Toriumi Kohsuke</string>
    <string name="noelle_desc">Like most of Mondstadts young people, Noelle always dreamed of being a knight of Favonius when she grew up. She may not have what it takes to be a knight just yet, but she is learning. Working as a maid at the Knights headquarters, she is constantly taking notes on what constitutes knightly speech, knightly conduct, and knightly customs. She holds firm to her belief that one day she will join their ranks, she just needs to keep trying her hardest at everything she does.</string>
    <string name="pang_noelle">Maid of Favonius</string>
    <string name="noelle_birthday">march 21th</string>
    <string name="noelle_affil">Knight of Favonius</string>
    <string name="noelle_vc">Takao Kanon</string>
    <string name="razor_desc">Some say he is an orphan raised by wolves. Others say he is a wolf spirit in human form. He is most at home in the wild, fighting with claw and thunder. To this day the wolf boy can be found prowling the forest, where he and his wolf pack hunt to survive using nothing more than their animal instincts.</string>
    <string name="pang_razor">Wolf Boy</string>
    <string name="razor_birthday">September 9th</string>
    <string name="razor_affil">Wolvendom</string>
    <string name="razor_vc">Uchiyama Kouki</string>
    <string name="sucrose_desc">An alchemist with an insatiable curiosity towards the world and everything in it. Attached to the Knights of Favonius as an assistant to Albedo, her area of focus is "bio-alchemy." She strives to enrich the world by transforming living things with the power of alchemy. Granted, the products of her research sometimes prove to be more weird than wonderful — but on the whole, she has made monumental contributions to the field of bio-alchemy.</string>
    <string name="pang_sucrose">Knight of Favonius alcemist</string>
    <string name="sucrose_birthday">November 26th</string>
    <string name="sucrose_affil">Knight of Favonius</string>
    <string name="sucrose_vc">Fujita Akane</string>
    <string name="about">About</string>
    <string name="combat">Combat Info</string>
    <string name="Talent">Talents</string>
    <string name="bennetbasic">Strike of Fortune</string>
    <string name="bennetbasicdesc">Normal Attack: Performs up to 5 rapid strikes.
Charged Attack: Consumes a certain amount of Stamina to unleash 2 rapid sword swings.

Plunging Attack: Plunges from mid-air to strike the ground below, damaging opponents along the path and dealing AoE DMG upon impact.</string>
    <string name="bennetE">Passion Overload</string>
    <string name="bennetRdesc">Bennett concentrates the spirit of Adventure and Pyro into his blade. Depending on how long he charges for, different effects occur.
Press: A single, swift flame strike that deals Pyro DMG.
Hold (Short): Charges up, resulting in different effects when unleashed based on the Charge Level
Level 1: Strikes twice, dealing Pyro DMG and launching opponents.
Level 2: Unleashes 3 consecutive attacks that deal impressive Pyro DMG, but the last attack triggers an explosion that launches both Bennett and the enemy.
Bennett takes no damage from being launched, but can take fall damage if he falls down a cliff.</string>
    <string name="bennetBurst">Fantastic Voyage</string>
    <string name="bennetBurstdesc">Bennett performs a jumping slam attack that deals Pyro DMG, creating an Inspiration Field for 12 seconds.
Inspiration Field:

If the health of a character within the AoE is equal to or falls below 70%, their health will regenerate each second. The amount of HP restores scales off Bennett\'s Max HP.
If the health of a character within the AoE is higher than 70%, they gain an ATK Bonus that scales based on Bennett\'s Base ATK.
Imbues characters within the AoE with Pyro.</string>
    <string name="albedo_basic">Favonius Bladework</string>
    <string name="Albedo_basic_desc">Normal Attack: Perform up to 5 rapid strikes.
Charged Attack: Consumes a certain amount of Stamina to unleash 2 rapid sword strikes.
Plunging Attack: Plunges from mid-air to strike the ground below, damaging opponents along the path and dealing AoE DMG upon impact.</string>
    <string name="Albedo_E">Solar Isotoma</string>
    <string name="jean_basic">Favonius Bladework</string>
    <string name="jean_basic_desc">Normal Attack: Performs up to 5 consecutive strikes.
Charged Attack: Consumes a certain amount of stamina to launch an opponent using the power of wind. Launched opponents will slowly fall to the ground.
Plunging Attack: Plunges from mid-air to strike the ground below, damaging opponents along the path and dealing AoE DMG upon impact.</string>
    <string name="jean_E">Gale Blade</string>
    <string name="jean_E_desc">Focusing the might of the formless wind around her blade, Jean releases a miniature storm, launching opponents in the direction she aims at, dealing massive Anemo DMG.
Hold: At the cost of continued stamina consumption, Jean can command the whirlwind to pull surrounding opponents and objects towards her front.
Direction can be adjusted.
Character is immobile during skill duration.</string>
    <string name="jean_burst">Dandelion Breeze</string>
    <string name="jean_burst_desc">Calling upon the wind\'s protection, Jean creates a swirling Dandelion Field, launching surrounding opponents and causing Anemo DMG. At the same time, she instantly regenerates a large amount of HP for all party members. The amount of HP restored scales off Jean\'s ATK.
Dandelion Field:
Continuously regenerates HP of characters within the AoE and continuously imbues them with Anemo.
Deals Anemo DMG to opponents entering or exiting the Dandelion Field.</string>
</resources>