<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/bbennet" />

            <TextView
                style="@style/TextContent.Small.White"
                android:layout_width="149dp"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="#4D000000"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/sword"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/icon_sword" />
        </FrameLayout>

        <TextView
            style="@style/TextContent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/bennet"
            android:textSize="32sp" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginStart="16dp"
            android:layout_width="140dp"
            android:layout_height="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/pang_bennet"
            android:textSize="16sp"/>

        <TextView
            style="@style/TextContent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/bennet_desc"
            android:textSize="15sp" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/profile"
            android:textSize="30sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/birthday"
                    android:textSize="15sp"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/bennet_birthday"
                    android:textSize="15sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/nation"
                    android:textSize="15sp"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_size"
                    android:textSize="15sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/affil"
                    android:textSize="15sp"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/bennet_affil"
                    android:textSize="15sp"/>
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/vc"
            android:textSize="30sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ousaka_ryouto" />

            <TextView
                style="@style/TextContent"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/profile_image"
                android:text="@string/bennet_vc"
                android:textSize="25sp"/>


        </RelativeLayout>

        <TextView
            style="@style/TextContent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/combat"
            android:textSize="30sp" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginStart="16dp"
            android:layout_width="140dp"
            android:layout_height="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Talent"
            android:textSize="16sp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/talent_strike_of_fortune" />

                <TextView
                    style="@style/TextSpec.Field"
                    android:layout_marginTop="25dp"
                    android:text="@string/bennetbasic"
                    android:textSize="15sp"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:layout_height="240dp"
                    android:text="@string/bennetbasicdesc"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/talent_passion_overload" />

                <TextView
                    style="@style/TextSpec.Field"
                    android:layout_marginTop="25dp"
                    android:text="@string/bennetE"
                    android:textSize="15sp"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/bennetRdesc"
                    android:textSize="15sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/talent_fantastic_voyage" />


                <TextView
                    style="@style/TextSpec.Field"
                    android:layout_marginTop="25dp"
                    android:text="@string/bennetBurst"
                    android:textSize="15sp"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/bennetBurstdesc"
                    android:textSize="15sp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>